Now works when running from a jar instead of just within intellij